# seal-inventory

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml  pylint.yml
config/: settings.seal_inventory.env
docs/: architecture.md
src/seal_inventory/: __init__.py
src/seal_inventory/api/: app.py  routes.py
src/seal_inventory/core/: dependencies.py  security.py
src/seal_inventory/db/: connection.py  data_warehouse.py
src/seal_inventory/repositories/: seal_repository.py
src/seal_inventory/schemas/: auth.py  seal.py
src/seal_inventory/services/: auth_service.py  seal_service.py
tests/integration/: test_api_db_integration.py
tests/unit/: test_seal_service.py
