[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seal-inventory"
version = "0.1.0"
description = "API service for retrieving data from Microsoft SQL Server."
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",

    # Validation
    "pydantic>=2.9.0,<3.0.0",

    # Database
    "pyodbc>=5.1.0,<6.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",

    # HTTP client (for testing / integrations)
    "httpx>=0.27.0,<1.0.0",

    # Environment variables
    "python-dotenv>=1.0.0,<2.0.0",

    # AUTH
    "ldap3>=2.9.1",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    # Formatting
    "black>=24.0.0",
    "isort>=5.13.0",

    # Linting
    "flake8>=7.0.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",

    # Dev tools
    "pre-commit>=3.7.0",
]

# setuptools config (src layout)
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Black config
[tool.black]
line-length = 88
target-version = ["py311"]

# isort config (aligned with black)
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["seal_inventory"]

# flake8 config
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]